--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -9,7 +9,7 @@
             <div class="image absolute filter blur-sm md:blur-md h-full w-full -z-10">
             </div>
             <div class="relative flex flex-col justify-center items-center text-secondary bg-transparent min-h-screen px-4">
-                <h1 class="font-secondary text-home-title flex flex-col items-start md:w-[780px]">Bienvenue au <span class="font-primary text-home-quai pt-2 self-center">Quai Antique</span></h1>
+                <h1 class="font-secondary text-home-title flex flex-col items-start md:w-[680px] ld:w-[780px]">Bienvenue au <span class="font-primary text-home-quai pt-2 self-center">Quai Antique</span></h1>
                 <div class="font-secondary pt-8 text-home-title-moving md:flex md:gap-2">
                     <p class="">Un restaurant</p>
                     <ul class="flex flex-col items-center">
