--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,12 +19,12 @@
         {% block header %}
             {# IF MOBILE #}
             {% block mobile_header %}
-            <header class="h-[110px] w-screen absolute flex justify-between px-6 py-3">
+            <header class="h-[110px] w-screen absolute flex justify-between px-6 py-3 md:px-12">
                 <a href="{{ path('home') }}" class=""><img src={{ asset('images/svg/'~ "logo-white.svg")}} alt="Logo Quai Antique blanc" class="h-full"></a>
-                <button><img src={{ asset('images/svg/'~ "hamburger-open.svg") }} alt="Open menu"></button>
-                <nav class="hidden"> 
-                    <ul>
-                        <li><a href="{{ path('home') }}">Accueil</a></li>
+                <button class="md:hidden"><img src={{ asset('images/svg/'~ "hamburger-open.svg") }} alt="Open menu"></button>
+                <nav class="hidden md:block uppercase"> 
+                    <ul class="md:inline-flex md:gap-8 text-secondary font-secondary relative top-[57px]">
+                        <li><a href="{{ path('home') }}" class="active">Accueil</a></li>
                         <li><a href="">Carte</a></li>
                         <li><a href="">Réserver</a></li>
                         <li><a href="">Contact</a></li>
