--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -103,8 +103,31 @@ header nav a.active::after {
     @apply bg-500;
 }
 
-
-
+/* CARD */
+.title_section {
+    @apply text-home-title text-center text-secondary font-primary;
+}
+.title_container img{
+    @apply mx-auto -top-[5px] relative;
+    width: clamp(9.375rem, 1.786rem + 37.946vw, 20rem);
+}
+.diamonds li {
+    @apply w-[100px] h-[100px] flex justify-center items-center overflow-hidden relative drop-shadow-lg text-xl;
+}
+.diamonds h2, .diamonds img {
+    @apply -rotate-45;
+}
+.diamonds img {
+    @apply blur blur-[1px];
+}
+.diamonds img, .diamonds li > div {
+    @apply absolute -z-20 max-w-none object-cover top-0 left-0 -translate-y-[15.5%] -translate-x-[15.5%];
+    width: calc(14400px / 101);
+    height: calc(14400px / 101);
+}
+.diamonds li > div {
+    @apply bg-500/50 -z-10;
+}
 
 @media screen and (min-width: 768px) {
     footer, footer div:nth-child(2), footer div:nth-child(2) div {
