--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
     <main class="w-full">
-        <div class="min-h-screen h-full w-full">
+        <section class="min-h-screen h-full w-full">
             <div class="image absolute filter blur-sm md:blur-md h-full w-full -z-10">
             </div>
             <div class="relative flex flex-col justify-center items-center text-secondary bg-transparent min-h-screen px-4">
@@ -25,7 +25,8 @@
                     </ul>
                 </div>
             </div>
-        <div class="h-full text-secondary p-4 font-secondary overflow-x-hidden">
+        </section>
+        <section class="h-full text-secondary p-4 font-secondary overflow-x-hidden">
             <h2 class="text-2.25xl text-center md:text-2.5xl md:mb-4">La Savoie dans votre assiette !</h2>
             <div class="carousel font-primary flex flex-col md:mb-4">
                 <div class="carousel_pics grid gap-4 relative my-6 w-fit">
@@ -70,7 +71,7 @@
                 </div>
             </div>
             <p class="text-center my-7 leading-8 md:text-1.5xl md:max-w-[810px] md:mx-auto md:mb-12" >À coeur de travailler avec les <span class="text-lg md:text-2xl">produits</span> et <span class="text-lg md:text-2xl">producteurs</span> de la région, le <span class="text-lg md:text-2xl">Chef Arnaud Michant</span> vous garantit une expérience <span class="text-lg md:text-2xl">unique</span> !</p>
-            <button class="bg-secondary drop-shadow-lg text-primary text-[1.3rem] h-[58px] w-[170px] text-center relative left-1/2 -translate-x-1/2 hover:bg-400 hover:text-secondary duration-150 md:text-2xl ">Réserver</button>
-        </div>
+            <a href="" class="bg-secondary drop-shadow-lg text-primary text-[1.3rem] h-[58px] w-[170px] text-center relative left-1/2 -translate-x-1/2 hover:bg-400 hover:text-secondary duration-150 md:text-2xl ">Réserver</a>
+        </section>
     </main> 
 {% endblock %}
