--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -4,13 +4,13 @@
 
 
 {% block body %}
-    <main class="w-full min-h-screen pt-28 px-6 flex flex-col justify-around">
+    <main class="w-full min-h-screen pt-28 px-6 flex flex-col justify-around overflow-y-hidden">
         <div class="title_container">
             <h1 class="title_section">Carte</h1>
-            <img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales">
+            <img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
         </div>
-        <section class="text-secondary font-primary my-20">
-            <ul class="diamonds grid grid-cols-2 gap-2 rotate-45">
+        <section class="text-secondary font-primary section_card">
+            <ul class="diamonds grid grid-cols-2 gap-2 rotate-45 lg:gap-4">
                 <li id="card-1" class="relative left-full -translate-x-full">
                     <div></div>
                     <picture>
@@ -53,6 +53,6 @@
                 </li>
             </ul>
         </section>
-        <div class="h-[42px] w-[200px] bg-secondary drop-shadow-lg mx-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150">Réservez maintenant !</a></div>
+        <div class="h-[42px] w-[200px] bg-secondary drop-shadow-lg mx-auto cursor-pointer flex items-center justify-center hover:bg-400 group duration-150 md:w-[350px] md:h-[70px] md:text-1.5xl"><a href="" class="text-primary font-secondary group-hover:text-secondary duration-150">Réservez maintenant !</a></div>
     </main>
 {% endblock %}
