--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <p class="text-center my-7 leading-8 md:text-1.5xl md:max-w-[810px] md:mx-auto md:mb-12" >À coeur de travailler avec les <span class="text-lg md:text-2xl">produits</span> et <span class="text-lg md:text-2xl">producteurs</span> de la région, le <span class="text-lg md:text-2xl">Chef Arnaud Michant</span> vous garantit une expérience <span class="text-lg md:text-2xl">unique</span> !</p>
-            <a href="" class="bg-secondary drop-shadow-lg text-primary text-[1.3rem] h-[58px] w-[170px] text-center relative left-1/2 -translate-x-1/2 hover:bg-400 hover:text-secondary duration-150 md:text-2xl ">Réserver</a>
+            <div class="bg-secondary drop-shadow-lg text-primary h-[58px] w-[170px] relative left-1/2 -translate-x-1/2 hover:bg-400 duration-150 group cursor-pointer flex justify-center items-center"><a href="" class="text-[1.3rem] group-hover:text-secondary duration-150 md:text-2xl ">Réserver</a></div>
         </section>
     </main> 
 {% endblock %}
