--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -116,6 +116,8 @@
             {% endblock %}
         {% endblock %}
         <script src="https://kit.fontawesome.com/4ba6d56c15.js" crossorigin="anonymous"></script>
+        {% block scripts %}
+        {% endblock %}
     </body>
 </html>
  
