--- a/templates/Card/Starter/starter.card.html.twig
+++ b/templates/Card/Starter/starter.card.html.twig
@@ -36,7 +36,7 @@
                     <p class="price">28,00</p>
                 </li>
             </ul>
-            <div class="mx-auto top-[50px] relative flex card-button rounded-full bg-secondary h-[46px] w-[46px] justify-center items-center cursor-pointer md:h-[60px] md:w-[60px] md:top-[100px] "><a href="{{ path('card') }}" class="text-primary text-2xl md:text-4xl"><i class="fa-solid fa-arrow-down"></i></a></button>
+            <div class="mx-auto top-[50px] relative flex card-button rounded-full bg-secondary h-[46px] w-[46px] justify-center items-center cursor-pointer md:h-[60px] md:w-[60px] md:top-[100px] hover:bg-400 group duration-150" id="back-button"><a href="{{ path('card') }}" class="text-primary text-2xl md:text-4xl group-hover:text-secondary duration-150"><i class="fa-solid fa-arrow-down"></i></a></button>
     </div>
     </section>
 </div>
