--- a/templates/Card/Starter/starter.card.html.twig
+++ b/templates/Card/Starter/starter.card.html.twig
@@ -5,15 +5,15 @@
 {% block subTitle %} - Entrées{% endblock %}
 
 {% block section %}
-<div class="main-content ease-in duration-500 min-h-full flex-1 flex mt-5">
-    <section class="text-secondary font-primary section_card w-full flex-1 relative max-w-[515px]" id="section-starter">
-        <div class="box duration-500 ease-in -z-10"><img src={{ asset('images/svg/'~'Rectangle.svg') }} alt=""></img></div>
-        <div class="container-card blank duration-150 linear relative">
-            <div class="flex flex-col items-center pb-4 relative -top-[10px] md:-top-[50px]">
-                <h2 class="text-2.25xl md:text-3xl">Entrées</h2>
+<div class="main-content">
+    <section class="" id="section-starter">
+        <div class="box"><img src={{ asset('images/svg/'~'Rectangle.svg') }} alt=""></img></div>
+        <div class="container-card blank">
+            <div class="card_titles">
+                <h2 class="">Entrées</h2>
                 <img src={{ asset('images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
             </div>
-            <ul class="card-items grid gap-4">
+            <ul class="card-items">
                 <li>
                     <div>
                         <h3>Assiette de cochonailles</h3>
@@ -36,7 +36,7 @@
                     <p class="price">28,00</p>
                 </li>
             </ul>
-            <div class="mx-auto top-[50px] relative flex card-button rounded-full bg-secondary h-[46px] w-[46px] justify-center items-center cursor-pointer md:h-[60px] md:w-[60px] md:top-[100px] hover:bg-400 group duration-150" id="back-button"><a href="{{ path('card') }}" class="text-primary text-2xl md:text-4xl group-hover:text-secondary duration-150"><i class="fa-solid fa-arrow-down"></i></a></button>
+            <div class="button-change group" id="back-button"><a href="{{ path('card') }}" class="group-hover:text-secondary"><i class="fa-solid fa-arrow-down"></i></a></button>
     </div>
     </section>
 </div>
