--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li id="card-dessert" class="relative left-full -translate-x-full">
-                        <a href="">
+                        <a href="{{ path('card-dessert') }}">
                             <div></div>
                             <picture>
                                 <source srcset={{ asset('images/card/'~"dessert-extraLarge.jpg") }} media="(min-width : 1200px)">
