--- a/templates/Card/Dessert/dessert.card.html.twig
+++ b/templates/Card/Dessert/dessert.card.html.twig
@@ -1,4 +1,3 @@
-
 {% extends "Card/card.html.twig" %}
 
 {% block subTitle %} - Plats{% endblock %}
@@ -8,39 +7,39 @@
     <section class="" id="section-starter">
         <div class="box"><img src={{ asset('images/svg/'~'Rectangle.svg') }} alt=""></img></div>
         <div class="container-card blank sm-cardButton:flex">
-            <div class="sm-cardButton:order-last">
+            <div class="pb-4">
                 <div class="card_titles">
-                    <h2 class="">Plats</h2>
+                    <h2 class="">Desserts</h2>
                     <img src={{ asset('images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
                 </div>
                 <ul class="card-items">
                     <li>
                         <div>
-                            <h3>L'authentique farçon savoyard maison</h3>
-                            <p class="comment" >Râpé de patates servie avec charcuterie, salade mêlée et sa sauce fromage blanc</p>
+                            <h3>Nougat glace et son coulis de myrtilles</h3>
+                            <p class="comment" ></p>
                         </div>
-                        <p class="price">19,90</p>
+                        <p class="price">8,90</p>
                     </li>
                     <li>
                         <div>
-                            <h3>La Croziflette royale</h3>
-                            <p class="comment" >Gratiné de Crozet au sarrasin de fabrication artisanal, lardons, oignons, Reblochon, servie avec Jambon sec de Savoie et salade mêlée</p>
+                            <h3>Coupe des montagnes</h3>
+                            <p class="comment" >Glace yaourt, coulis de myrtiles, myrtilles, chantilly</p>
                         </div>
-                        <p class="price">28,00</p>
+                        <p class="price">10,50</p>
                     </li>
                     <li>
                         <div>
-                            <h3>Marmite de crozets aux noix de saint Jacques</h3>
-                            <p class="comment" >Sauce crustacées, gratinée au beaufort</p>
+                            <h3>Assortiment de fromages secs de Savoie</h3>
+                            <p class="comment" >Beaufort et Roblochon</p>
                         </div>
-                        <p class="price">29,40</p>
+                        <p class="price">10,80</p>
                     </li>
                     <li>
                         <div>
-                            <h3>Fondue traditionnelle</h3>
-                            <p class="comment" >Servie avec sa salade mêlée et patates, mini 2pers, prix par pers</p>
+                            <h3>Camembert au lait cru flambé</h3>
+                            <p class="comment" ></p>
                         </div>
-                        <p class="price">29,90</p>
+                        <p class="price">19,80</p>
                     </li>
                     <li>
                         <div>
@@ -51,7 +50,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="button-change group sm-cardButton:absolute sm-cardButton:top-1/2 sm-cardButton:-translate-y-1/2 sm-cardButton:-left-[80px] md-cardButton:-left-[135px]" id="back-button"><a href="{{ path('card') }}" class="group-hover:text-secondary"><i class="fa-solid fa-arrow-left"></i></a></button>
+            <div class="button-change group sm-cardButton:absolute sm-cardButton:top-1/2 sm-cardButton:-translate-y-1/2 sm-cardButton:-right-[80px] md-cardButton:-right-[135px]" id="back-button"><a href="{{ path('card') }}" class="group-hover:text-secondary"><i class="fa-solid fa-arrow-right"></i></a></button>
     </div>
     </section>
 </div>
