--- a/templates/Card/card.html.twig
+++ b/templates/Card/card.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
     <main class="w-full min-h-screen pt-28 px-6 flex flex-col overflow-hidden">
-        <div class="title_container">
+        <div class="title_container bg-primary">
             <h1 class="title_section">Carte</h1>
             <img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
         </div>
